# YOLOv8_Efficient

./: .gitignore  README.md  README.zh-CN.md  calc_coco_metric.py  detect.py  metric_test.py  prepare_data.py  resume_test.py  train.py  train_cls.py  train_detect.py  train_seg.py  val.py
data/: coco.yaml  coco128-seg.yaml  coco128.yaml
data/hyps/: hyp.Objects365.yaml  hyp.VOC.yaml  hyp.scratch-high.yaml  hyp.scratch-low.yaml
log/: README.md  yolo_model_data.csv
models/: common.py
ultralytics/: setup.cfg
ultralytics-master/: PKG-INFO
ultralytics-master/ultralytics/: __init__.py
ultralytics-master/ultralytics/nn/: modules.py
ultralytics/ultralytics/weights/yolov8n_openvino_model/: yolov8n.yaml
ultralytics/ultralytics/yolo/engine/: predictor.py
utils/: general.py  google_utils.py  loss.py  metrics_plots.py  plots.py  root_utils.py  torch_utils.py
