[metadata]
license_file = LICENSE
description_file = README.md

[tool:pytest]
norecursedirs = 
	.git
	dist
	build
addopts = 
	--doctest-modules
	--durations=25
	--color=yes

[flake8]
max-line-length = 120
exclude = .tox,*.egg,build,temp
select = E,W,F
doctests = True
verbose = 2
format = pylint
ignore = E731,F405,E402,F401,W504,E127,E231,E501,F403

[isort]
line_length = 120
multi_line_output = 0

[yapf]
based_on_style = pep8
spaces_before_comment = 2
COLUMN_LIMIT = 120
COALESCE_BRACKETS = True
SPACES_AROUND_POWER_OPERATOR = True
SPACE_BETWEEN_ENDING_COMMA_AND_CLOSING_BRACKET = False
SPLIT_BEFORE_CLOSING_BRACKET = False
SPLIT_BEFORE_FIRST_ARGUMENT = False

[egg_info]
tag_build = 
tag_date = 0

